# phone_rdp

./: .gitignore  FINAL_SPEC.md  ORIGINAL_PROMPT.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/java/com/example/phonerdp/: MainActivity.kt
app/src/main/java/com/example/phonerdp/data/repository/: EncryptedRecentConnectionRepository.kt  (+2 more)
app/src/main/java/com/example/phonerdp/native_bridge/: NativeBridgeEvent.kt  RdpNativeBridge.kt  RdpNativeCodes.kt
app/src/main/java/com/example/phonerdp/ui/: AppRoot.kt
app/src/main/jniLibs/arm64-v8a/cmake/FreeRDP-Client3/: FreeRDP-ClientConfig.cmake  FreeRDP-ClientConfigVersion.cmake  FreeRDP-ClientTargets-release.cmake  FreeRDP-ClientTargets.cmake
app/src/main/jniLibs/arm64-v8a/cmake/FreeRDP3/: FreeRDPConfig.cmake  FreeRDPTargets-release.cmake  FreeRDPTargets.cmake
app/src/main/jniLibs/arm64-v8a/cmake/WinPR3/: WinPRConfig.cmake  WinPRTargets-release.cmake  WinPRTargets.cmake
app/src/main/jniLibs/arm64-v8a/include/freerdp3/freerdp/: build-config.h  buildflags.h  config.h  settings_keys.h  version.h
app/src/main/jniLibs/arm64-v8a/include/winpr3/winpr/: build-config.h  buildflags.h  config.h  version.h
app/src/main/jniLibs/arm64-v8a/pkgconfig/: freerdp-client3.pc  freerdp3.pc  winpr3.pc
app/src/main/res/values/: strings.xml  themes.xml
docs/: ARCHITECTURE.md  CHANGELOG.md  FAQ.md  TROUBLESHOOTING.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_freerdp_arm64.ps1
(+16 files in other folders)
